syntax = "proto3";

option java_package = "com.dominik.smarthospital.DoctorService";

service DoctorService {
  //unary
  rpc login(LoginRequest) returns (APIResponse);
  //unary
  rpc logout(LogoutRequest) returns (APIResponse);
}

message LoginRequest {
  string userName = 1;
  string password = 2;
}

message LogoutRequest {

}

message APIResponse{
  string responseMessage = 1;
  int32 responseCode = 2;
}


